# Advent-Of-Code

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: input.rs  macro.rs  main.rs
src/solutions/: mod.rs
src/solutions/_2015/: day1.rs  day14.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs
src/solutions/_2016/: day2.rs
src/solutions/_2020/: day1.rs  day2.rs  day3.rs
src/solutions/_2021/: day1.rs  day2.rs  day3.rs
src/solutions/_2022/: day10.rs  day11.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/solutions/_2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
