[package]
name = "aoc2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "macro"
path = "src/macro.rs"
proc-macro = true

[dependencies]
anyhow = "1.0.93"
cached = "0.54.0"
md5 = "0.7.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
syn = { version = "2.0.87", features = ["full"] }
